Use non-deprecated method to construct locale