@@ -5,7 +5,7 @@ import java.util.Locale;
 public final class Locales {
 
   public static final String POLISH_LOCALE_TAG = "pl";
-  public static final Locale POLISH = new Locale(POLISH_LOCALE_TAG);
+  public static final Locale POLISH = Locale.of(POLISH_LOCALE_TAG);
 
   private Locales() {}
 }
